# genai-mil-hackathon-final

./: .gitignore  AGENTS.md  JUDGES.md  Makefile  README.md  pyproject.toml
docs/: README.md  application-implementation-plan.md  claude-agent-teams-execution-plan.md  demo-receipts.md  hackathon-submission-receipt.md  infra-implementation-plan.md  live-llm-provider-implementation-plan.md  model-testing-plan.md  policy-bonfire-test-harness-spec.md  policy-bonfire-v1-spec.md  schema-implementation-plan.md  spec.md  synthetic-data-implementation-plan.md  synthetic-voucher-chatbot-spec.md  testing-plan.md  v0-implementation-plan.md  v1-testing-implementation-plan.md
infra/: .terraform.lock.hcl  README.md  api_gateway.tf  dns.tf  iam.tf  lambda.tf  locals.tf  logs.tf  networking.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf  versions.tf
policy_bonfire/: __init__.py  anchors.py  decision_envelope.py  decision_schema.py  evaluator.py  exporter.py  fake_tools.py  import_policy.py  live_config.py  live_contracts.py  live_costs.py  live_json.py  mock_specimen.py  prompts.py  run_live_provider_slice.py  run_mock_v1.py  scenarios.py  scrubber.py  types.py
tests/: __init__.py  conftest.py  helpers.py  test_anchor_manifest.py  test_decision_envelope.py  test_evaluator.py  test_exporter.py  test_fake_tools.py  test_import_policy.py  test_live_adapters_anthropic.py  test_live_adapters_gemini.py  test_live_adapters_openai.py  test_live_config.py  test_live_contracts.py  test_live_exporter.py  test_live_json.py  test_live_runner_cli.py  test_live_scrubber.py  test_mock_v1_e2e.py  test_policy_bonfire_runner.py  test_prompts.py  test_scenario_loader.py  test_scrubber.py
(+300 files in other folders)
