[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ao-radar"
version = "0.1.0"
description = "AO Radar pre-decision review fusion for DTS Approving Officials (synthetic-only hackathon prototype)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary-Hackathon" }
authors = [{ name = "AO Radar Hackathon Team" }]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Private :: Do Not Upload",
]
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
mcp = [
  "fastmcp>=0.2.0",
  "psycopg[binary]>=3.2,<4",
  "boto3>=1.34,<2",
]
test = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "httpx>=0.27,<1",
]
dev = [
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ao_radar_mcp*", "ao_radar_fraud_mock*", "ao_radar_db_ops*"]

[tool.setuptools.package-data]
"ao_radar_mcp" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "db: tests that require a Postgres connection (DATABASE_URL)",
  "e2e: tests that require a deployed MCP endpoint (AO_RADAR_MCP_BASE_URL)",
]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["infra"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src"]
